from 1.1.1 to 1.1.2
- cmake fix for openssl check.

from 1.1.0 to 1.1.1
- notify watcher for config directory.

from 1.0.3 to 1.1.0
- added switchview gui client to package.

from 1.0.2 to 1.0.3
- fix for init script.
- -d also alt background flag for convenience.

from 1.0.1 to 1.0.2
- new server redirection api.  This allows plugins to operate without
  having to be linked explicitly to and directly call exosip functions.
- documented plugin api and runtime headers
- service::publish proper handling of NULL address

from 1.0.0 to 1.0.1
- require ucommon 5.0.0
- fixes for plugin paths
- plugins report load-time errors after syslog initialized, not before

from version 0.10.5 to 0.10.6 and 1.0.0
- using events sync to validate connections and pass down housekeeping clock.
- event ipc extended multiplatform by fallback to localhost inet socket.

from version 0.10.4 to 0.10.5
- more consistent paths in cmake.

from version 0.10.3 to 0.10.4
- small fix for cmake from gahr.

from version 0.10.2 to 0.10.3
- some cross-platform portability fixes.

from version 0.10.1 to 0.10.2
- some reorganization of sources and common process code.

from version 0.10.0 to 0.10.1
- events dispatch ipc service added
- new --desktop server mode, but will require new ucommon (4.1.6 or later)
- minimized linkage where we do not require sipwitch runtime
- some cleanup of utils for error handling and recent ucommon changes.
- consolidated siprealm and sipdigest into "sipwitch" control app.
- cleanup and expansion of cmake support.

from version 0.9.3 to 0.10.0
- use of digest functions from usecure.
- notify removed, will be part of new switchview gui.
- cmake build added.

from version 0.9.2 to 0.9.3
- use gethostname for default domain name if not otherwise set.
- patch for sdp proxy parsing from rossell.

From version 0.9.1 to 0.9.2
- trap aborts and exits to kill fifo and treat "0.0.0.0" as NULL (Bug: #4).
- add contact: and expires param to registration (Bug: #5).