@@ -10,7 +10,7 @@
 
 AC_INIT(autogen.sh)
 
-VERSION="1.1.1"
+VERSION="1.1.2"
 LT_VERSION="1:2:0"
 UCOMMON_REQUIRES="4.2.0"
 
@@ -20,6 +20,7 @@ AC_PROG_CPP
 AC_PROG_CC
 AC_PROG_CXXCPP
 AC_PROG_CXX
+AC_PROG_LN_S
 AC_LIBTOOL_WIN32_DLL
 AC_LIBTOOL_DLOPEN
 AM_PROG_LIBTOOL
